# aiohttp_demo_backend

./: .env.example  .env.local.example  .env.test.example  .env.test.local.example  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  redis.acl.example  setup.cfg
alembic/: env.py
alembic/versions/: 969286cc4123_add_history_table.py  db8aba970509_initial.py
app/: config.py  constants.py  db_insert_initial_data.py  exceptions.py  logging_config.py  main.py  middlewares.py  role_service.py  schemas.py  security.py  user_service.py  validations.py
app/api/: routes.py
app/api/v1/: auth.py  roles.py  users.py
app/db/: pre_start.py  setup.py  tables.py
app/schemas/: __init__.py  base.py  credentials.py  roles.py  users.py
app/services/: auth_service.py
app/tests/: conftest.py  constants.py  preparation.py  test_auth.py  test_history.py  test_permissions.py  test_roles.py  test_users.py
docker/: Dockerfile
